[gd_scene load_steps=9 format=2]

[ext_resource path="res://Car.tscn" type="PackedScene" id=1]
[ext_resource path="res://Montserrat-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Camera.gd" type="Script" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 15, 0.5, 15 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 30, 1, 30 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Main" type="Node"]
script = ExtResource( 3 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
collision_layer = 4
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 2 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.127844, -0.857157, 0.498937, 0, 0.503065, 0.864248, -0.991794, -0.110489, 0.0643137, 8.50783, 5.54741, 0 )
light_color = Color( 1, 0.960784, 0, 1 )
shadow_enabled = true

[node name="Car" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.891, 0 )

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FR_offset" type="Label" parent="UI"]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FR: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RR_offset" type="Label" parent="UI"]
margin_top = 40.0
margin_right = 40.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RR: "

[node name="RL_offset" type="Label" parent="UI"]
margin_top = 80.0
margin_right = 40.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RL:"

[node name="FL_offset" type="Label" parent="UI"]
margin_top = 120.0
margin_right = 40.0
margin_bottom = 134.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "FL:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.762577, 0.194963, -0.616819, 0.00222349, 0.954288, 0.29888, 0.646893, 0.226548, -0.728152, -2.66931, 1.96309, -4.21794 )
script = ExtResource( 4 )

[connection signal="update_offset" from="Car" to="." method="_on_Car_update_offset"]
